tests/snapshots/run_wpt_conformance__trtx_cast_float_to_integer_underflows.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "mlNumber.https.any.js",
    "cast float to integer underflows",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: u8[4] @bytes([255, 127, 5, 0]);\n  }\n\n  nodes {\n    [clampOutput] = clamp(operand_0, label=\"\", maxValue=-1, minValue=null);\n  }\n\n  outputs { clampOutput; }\n}\n",
        ),
    },
)
